--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "Ascii85"
 uuid = "d66a24ed-3b8b-4cb5-acc0-191d405a6575"
-authors = ["pst-lz <p.stehring@gmail.com>"]
+authors = ["Peter Stehring <p.stehring@gmail.com>"]
 version = "0.1.0"
 
 [compat]
